fix: scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* For Webkit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #00B2A3;
+  border-radius: 8px;
+}
+
+/* For Firefox */
+.scrollbar-w-2 {
+  scrollbar-width: thin;
+  scrollbar-color: #00B2A3 #f1f1f1; /* thumb color and track color */
+}
